[gd_scene load_steps=11 format=3 uid="uid://5jjwndujehft"]

[ext_resource type="Texture2D" uid="uid://opr2f6doydac" path="res://Assets/BadGuy.png" id="1_542uk"]
[ext_resource type="Script" path="res://EnemyAI.gd" id="1_ihlo4"]
[ext_resource type="Material" uid="uid://db0xyhfvpeu4y" path="res://OutlineShader.tres" id="1_maqpj"]
[ext_resource type="Material" uid="uid://bcyuj4jaddmwx" path="res://Shadow.tres" id="4_i6re6"]
[ext_resource type="Texture2D" uid="uid://doxtqfax6qmos" path="res://Assets/badGuySleeping.png" id="5_6m2ho"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6mubw"]
size = Vector2(116, 283)

[sub_resource type="Animation" id="Animation_pg15j"]
resource_name = "Deafeted"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("enemy:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-294, 192), Vector2(-460, 598)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("enemy:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -1.20079, -1.53589]
}

[sub_resource type="Animation" id="Animation_wpdrf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("enemy:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("enemy:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n3ki3"]
_data = {
"Deafeted": SubResource("Animation_pg15j"),
"RESET": SubResource("Animation_wpdrf")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2kxk2"]
size = Vector2(20, 285)

[node name="CharacterBody2D" type="CharacterBody2D" groups=["enemy"]]
script = ExtResource("1_ihlo4")

[node name="enemyDeafetedShadow" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
material = ExtResource("4_i6re6")
position = Vector2(-40, 109)
rotation = -1.5708
scale = Vector2(10, 10)
texture = ExtResource("5_6m2ho")

[node name="enemyDefeated" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
material = ExtResource("1_maqpj")
position = Vector2(-43, 92)
rotation = -1.5708
scale = Vector2(10, 10)
texture = ExtResource("5_6m2ho")

[node name="enemy" type="Sprite2D" parent="."]
texture_filter = 1
material = ExtResource("1_maqpj")
scale = Vector2(10, 10)
texture = ExtResource("1_542uk")
hframes = 2

[node name="enemyHitbox" type="CollisionShape2D" parent="."]
position = Vector2(-19, 11)
shape = SubResource("RectangleShape2D_6mubw")

[node name="enemyShadow" type="Sprite2D" parent="."]
texture_filter = 1
material = ExtResource("4_i6re6")
position = Vector2(0, 303)
scale = Vector2(10, -10)
texture = ExtResource("1_542uk")
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_n3ki3")
}

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(45, 11)
shape = SubResource("RectangleShape2D_2kxk2")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
